[project]
name = "agent-worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[librabbitmq]>=5.6.3",
    "gevent>=26.4.0",
    "httpx>=0.28.1",
    "langfuse>=3.0.0",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.3",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
]
