[project]
name = "joblyser-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.80",
    "celery[librabbitmq]>=5.6.3",
    "chromadb-client>=1.5.5",
    "fastapi[standard]>=0.135.3",
    "fastembed>=0.8.0",
    "langchain>=1.2.14",
    "langchain-text-splitters>=1.1.1",
    "motor>=3.7.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.12.5",
    "pyjwt>=2.12.1",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
]
